@@ -32,12 +32,15 @@ import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertTrue;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Date;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeoutException;
 
+import org.jclouds.blobstore.integration.internal.BaseBlobStoreIntegrationTest;
+import org.jclouds.http.HttpResponseException;
 import org.jclouds.s3.domain.AccessControlList;
 import org.jclouds.s3.domain.CannedAccessPolicy;
 import org.jclouds.s3.domain.ObjectMetadata;
@@ -47,8 +50,6 @@ import org.jclouds.s3.domain.AccessControlList.EmailAddressGrantee;
 import org.jclouds.s3.domain.AccessControlList.GroupGranteeURI;
 import org.jclouds.s3.domain.AccessControlList.Permission;
 import org.jclouds.s3.options.PutObjectOptions;
-import org.jclouds.blobstore.integration.internal.BaseBlobStoreIntegrationTest;
-import org.jclouds.http.HttpResponseException;
 import org.jclouds.util.Strings2;
 import org.testng.annotations.Test;
 
@@ -62,8 +63,12 @@ import com.google.common.collect.Maps;
  */
 @Test(groups = { "integration", "live" })
 public class S3ClientLiveTest extends BaseBlobStoreIntegrationTest {
+   public S3ClientLiveTest() {
+      this.provider = "s3";
+   }
+   
    public S3Client getApi() {
-      return (S3Client) context.getProviderSpecificContext().getApi();
+      return view.unwrap(S3ApiMetadata.CONTEXT_TOKEN).getApi();
    }
 
    /**
@@ -86,8 +91,7 @@ public class S3ClientLiveTest extends BaseBlobStoreIntegrationTest {
    }
 
    protected URL getObjectURL(String containerName, String key) throws Exception {
-      URL url = new URL(String.format("http://%s.%s/%s", containerName, context.getProviderSpecificContext()
-               .getEndpoint().getHost(), key));
+      URL url = new URL(String.format("http://%s.%s/%s", containerName, URI.create(endpoint).getHost(), key));
       return url;
    }
 
